--- a/n320projects/ConceptualCafe/index.html
+++ b/n320projects/ConceptualCafe/index.html
@@ -7,12 +7,17 @@
           content="width=device-width, initial-scale=1.0, user-scalable=1, minimum-scale=1.0, maximum-scale=1.0">
     <!--<link rel="stylesheet" href="css/css/font-awesome.min.css">-->
     <!--<link rel="stylesheet" href="css/style.css">-->
+    <link href="https://fonts.googleapis.com/css?family=Quicksand:700" rel="stylesheet">
 </head>
 <style>
     html, body {
         height: 100%;
         margin: 0;
         padding: 0;
+        font-family: 'Quicksand', sans-serif;
+        font-size: 24px;
+        text-transform: uppercase;
+        letter-spacing: 2px;
     }
 
     #app {
@@ -25,7 +30,7 @@
 
     .customer {
         width: 25%;
-        min-height: 75%;
+        min-height: 60%;
         background: #bddabd;
         display: flex;
         justify-content: center;
@@ -38,9 +43,13 @@
     .customer button {
         padding: 20px;
         background: transparent;
+        border: none;
         min-width: 200px;
         box-sizing: border-box;
-        border: 1px solid #222222;
+        font-family: 'Quicksand', sans-serif;
+        font-size: 20px;
+        text-transform: uppercase;
+        letter-spacing: 1.5px;
     }
 
     .customer button:not(:last-child) {
@@ -53,7 +62,7 @@
 
     .barista {
         width: 25%;
-        min-height: 75%;
+        min-height: 60%;
         background: #F2D78C;
         display: flex;
         justify-content: center;
